--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,8 @@
   <string name="GoogleMaterialIcon">
     http://google.github.io/material-design-icons/#getting-icons - CC BY 4.0
   </string>
+
+  <string name="update">"0.5 BETA 버전
+
+    알림기능에 오류가 있을수 있음"</string>
 </resources>
