context menu re-style

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
   <string name="app_name">G밥</string>
 
   <string name="hello_world">Hello world!</string>
-  <string name="action_settings">개발자</string>
+  <string name="action_settings">만든이들</string>
 
   <string name="Lunch">점심</string>
   <string name="Dinner">저녁</string>
